# freeswitch

./: configure.ac  freeswitch.spec
conf/vanilla/autoload_configs/: prometheus.conf.xml
debian/: bootstrap.sh  control-modules  freeswitch-systemd.freeswitch.service
docker/base_image/: README.md  build.sh  entrypoint.sh  freeswitch-config.patch  make_min_archive.sh
docker/base_image/hooks/: pre_build
libs/esl/python/: Makefile
scripts/ci/: rpmbuilder.sh
src/: switch_core.c  switch_core_media.c  switch_core_media_bug.c  switch_core_session.c  switch_core_state_machine.c  switch_ivr_originate.c  switch_msrp.c
src/include/: switch_core.h  switch_core_media.h  switch_types.h
src/mod/applications/mod_av/: avcodec.c  avformat.c
src/mod/applications/mod_callcenter/: mod_callcenter.c
src/mod/applications/mod_commands/: mod_commands.c
src/mod/applications/mod_conference/: conference_api.c  conference_event.c  conference_loop.c  conference_member.c  conference_record.c  mod_conference.c  mod_conference.h
src/mod/applications/mod_mongo/: Makefile.am
src/mod/applications/mod_prometheus/: Makefile.am  mod_prometheus.c
src/mod/applications/mod_rad_auth/: Makefile.am
src/mod/applications/mod_snom/: Makefile.am
src/mod/asr_tts/mod_pocketsphinx/: Makefile.am
src/mod/codecs/mod_av/: Makefile.am
src/mod/codecs/mod_av/test/: test_avformat.c
src/mod/endpoints/mod_sofia/: mod_sofia.c  mod_sofia.h  sofia.c  sofia_glue.c  sofia_media.c  sofia_presence.c
src/mod/event_handlers/mod_cdr_mongodb/: Makefile.am
src/mod/event_handlers/mod_erlang_event/: ei_helpers.c
src/mod/event_handlers/mod_event_socket/: mod_event_socket.c
src/mod/event_handlers/mod_kazoo/: kazoo_api.c  kazoo_commands.c  kazoo_dptools.c  kazoo_event_stream.c  kazoo_fetch_agent.c  kazoo_node.c  kazoo_utils.c  mod_kazoo.c
src/mod/event_handlers/mod_radius_cdr/: Makefile.am
src/mod/event_handlers/mod_snmp/: Makefile.am
src/mod/languages/mod_python/: Makefile.am
src/mod/xml_int/mod_xml_radius/: Makefile.am
